syntax = "proto3";

package cyan;

option go_package="github.com/KapitanD/cyan-project/cyan-api/proto/v1";

service UserService {
	rpc CreateUser(CreateRequest) returns (CreateResponse) {}
	rpc LoginUser(LoginRequest) returns (LoginResponse) {}
}

message CreateRequest {
	string login = 1;
	string password = 2;
	string repeat_password = 3;
}

message CreateResponse {
	UserIdentity user_id = 1;
	bool created = 2;
}

message LoginRequest {
	string login = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
	string refresh_token = 2;
}

message UserIdentity {
	string user_id = 1;
}